fixed dark mode select color

--- a/client/library-management/src/index.css
+++ b/client/library-management/src/index.css
@@ -83,7 +83,7 @@
 }
 
 select {
-  @apply bg-light-input-bg dark:bg-light-input-bg
+  @apply bg-light-input-bg dark:bg-dark-input-bg
          px-3 py-2 lg:px-4 lg:py-3
          rounded-2xl
          text-sm lg:text-base font-semibold;
